--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "type": "module",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.17.2",
+    "dotenv": "^17.2.1",
     "zod": "^3.23.0"
   }
 }
